[gd_scene load_steps=5 format=3 uid="uid://dmghwwb6u3t2g"]

[ext_resource type="Script" path="res://main/common/ui/dialogue-ui.gd" id="1_rhcb4"]
[ext_resource type="Texture2D" uid="uid://mdklhix3qexv" path="res://resources/textures/character/profile/dee.png" id="2_154pi"]
[ext_resource type="Texture2D" uid="uid://nvvx6xo8xq34" path="res://resources/textures/ui/dialogue-advance-button.png" id="3_stxcv"]
[ext_resource type="Texture2D" uid="uid://qushpqcmi2l" path="res://resources/textures/ui/dialogue-advance-button-pressed.png" id="4_uku4t"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhcb4")
metadata/_edit_lock_ = true

[node name="SpeechPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 192.0
offset_right = 480.0
offset_bottom = 256.0
theme_type_variation = &"DialoguePanel"
metadata/_edit_lock_ = true

[node name="SpeechStack" type="VBoxContainer" parent="SpeechPanel"]
layout_mode = 2
alignment = 1

[node name="Text" type="RichTextLabel" parent="SpeechPanel/SpeechStack"]
visible = false
clip_contents = false
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a mattis metus. Sed tincidunt nisl vitae dui fringilla, in porta massa lobortis."
fit_content = true
scroll_active = false

[node name="Button" type="Button" parent="SpeechPanel/SpeechStack"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"DialogueEntry"
text = "[This is a dialogue choice.]"
flat = true
alignment = 0

[node name="Button2" type="Button" parent="SpeechPanel/SpeechStack"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"DialogueEntry"
text = "[What if we made a peanut butter deli ham soup?]"
flat = true
alignment = 0

[node name="Button3" type="Button" parent="SpeechPanel/SpeechStack"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"DialogueEntry"
text = "[This is a dialogue choice that is too long for the box. The character should stop rambling.]"
flat = true
alignment = 0
text_overrun_behavior = 4
clip_text = true

[node name="IconPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 124.0
offset_right = 134.0
offset_bottom = 200.0
theme_type_variation = &"IconPanel"

[node name="Icon" type="TextureRect" parent="IconPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_154pi")
expand_mode = 1
stretch_mode = 2

[node name="Nametag" type="Label" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 181.0
offset_right = 279.0
offset_bottom = 200.0
theme_type_variation = &"NameLabel"
text = "Dee the Illustrious"

[node name="Advance" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 244.0
offset_right = 467.0
offset_bottom = 264.0
texture_normal = ExtResource("3_stxcv")
texture_pressed = ExtResource("4_uku4t")

[connection signal="pressed" from="SpeechPanel/SpeechStack/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SpeechPanel/SpeechStack/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="SpeechPanel/SpeechStack/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Advance" to="." method="_on_advance_pressed"]
